--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: Build
         run: pnpm build
   deploy:
-    uses: ruibaby/plugin-static-pages/actions/cd.yaml@main
+    uses: ruibaby/plugin-static-pages/.github/workflows/cd.yaml@main
     secrets:
       endpoint: ${{ secrets.ENDPOINT }}
       id: ${{ secrets.ID }}
